[tool.poetry]
name = "heuristic-steiner-tree"
version = "0.1.0"
description = "An algorithm to find Steiner Trees in a undirected graph using an heuristic function for computing paths"
authors = ["bendico765 <gianlucamorcaldi@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "heuristic_steiner_tree"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
